# rviz_cloud_annotation

./: CMakeLists.txt  README.md  package.xml
launch/: annotation.launch
rviz/: annotation.rviz
rviz_3d_view_controller/: CMakeLists.txt  package.xml
rviz_3d_view_controller/rviz_plugin/: plugin_description.xml
rviz_3d_view_controller/src/: rviz_orbit3d_view_controller.cpp  rviz_orbit3d_view_controller.h
rviz_cloud_annotation/: CMakeLists.txt  package.xml
rviz_cloud_annotation/data/: example.pcd
rviz_cloud_annotation/launch/: annotation.launch  example.launch
rviz_cloud_annotation/msg/: RectangleSelectionViewport.msg
rviz_cloud_annotation/rviz/: annotation.rviz
rviz_cloud_annotation/rviz_plugin/: cloud_annotation.xml
rviz_cloud_annotation/src/: point_neighborhood.cpp  point_neighborhood.h  point_neighborhood_search.cpp  point_neighborhood_search.h  rviz_cloud_annotation.cpp  rviz_cloud_annotation.h  rviz_cloud_annotation_class.cpp  rviz_cloud_annotation_class.h  rviz_cloud_annotation_plugin.cpp  rviz_cloud_annotation_plugin.h  rviz_cloud_annotation_point_plane.cpp  rviz_cloud_annotation_point_plane.h  rviz_cloud_annotation_points.cpp  rviz_cloud_annotation_points.h  rviz_cloud_annotation_points_io.cpp  rviz_cloud_annotation_undo.cpp  rviz_cloud_annotation_undo.h  rviz_select_tool.cpp  rviz_select_tool.h
rviz_plugin/: cloud_annotation.xml
src/: point_neighborhood.cpp  point_neighborhood.h  rviz_cloud_annotation.cpp  rviz_cloud_annotation.h  rviz_cloud_annotation_class.cpp  rviz_cloud_annotation_class.h  rviz_cloud_annotation_plugin.cpp  rviz_cloud_annotation_plugin.h  rviz_cloud_annotation_points.cpp  rviz_cloud_annotation_points.h
