<?xml version="1.0"?>
<package>
  <name>rviz_3d_view_controller</name>
  <version>0.0.0</version>
  <description>The rviz_3d_view_controller package</description>

  <maintainer email="rimlab@todo.todo">rimlab</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <rviz plugin="${prefix}/rviz_plugin/plugin_description.xml"/>
  </export>
</package>
